# chatx

./: .gitignore  README.md  build.sh  clean.sh  dev.sh  init_db.sh  test_ws.html
backend/: Cargo.toml
backend/migrations/: 0001_initial_schema.sql
backend/src/: main.rs
backend/src/db/: mod.rs
frontend/: README_REACT.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src-tauri/: tauri.conf.json
frontend/src/components/: ChannelsList.jsx  ChatRoom.jsx  JoinForm.jsx  LoginPage.jsx  Message.jsx  MessageInput.jsx  MessageList.jsx  RegisterPage.jsx  UserProfile.jsx
frontend/src/context/: AuthContext.jsx
