[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "5.5.3"
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5.0", features = ["cors"] }
include_dir = "0.7"
mime_guess = "2"
bcrypt = "0.15"
jsonwebtoken = "9"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
